package protocol;
syntax = "proto3";

// build command:
// ./node_modules/protobufjs/bin/pbjs -t json -o test/pb3/protocol/protocol.js test/pb3/protocol/*.proto

// v1
message Query {
  required int64 id = 1;
  required string action = 2;
  optional string param = 3;
  optional int64 time = 4;
  optional int32 priority = 5;
  optional string context = 6;
}

message Message {
  required int64 id = 1;
  required string type = 2;
  optional string data = 3;
  optional int64 time = 4;
  optional string context = 5;
}

// v2
enum DataType {
  STRING = 0;
  JSON = 1;
  PB = 2;
}

message Data {
//  required DataType type = 1;
  required string type = 1;
  required string loader = 2;
  optional string string = 3;
  optional bytes buffer = 4;
}

message Query2 {
  required int64 id = 1;
  required string action = 2;
  optional Data param = 3;
  optional int64 time = 4;
  optional int32 priority = 5;
  optional string context = 6;
}

message Message2 {
  required int64 id = 1;
  required string type = 2;
  required Data data = 3;
  optional int64 time = 4;
  optional string context = 5;
}

// other data
message SampleData {
  required int64 id = 1;
  required string name = 2;
  optional int32 age = 3;
  optional string gender = 4;
  optional string birthday = 5;
  optional string phone = 6;
  optional string email = 7;
  optional string address = 8;
  optional string note = 9;
  optional int64 regtime = 10;
}